<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:transitionName="appicons" />

    <LinearLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <com.sharmastech.skillhouettes.controls.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:text="@string/stulogin"
            android:textColor="@color/bs_blue"
            customtv:fontType="5" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/account_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                android:drawableLeft="@drawable/ic_action_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_action_person"
                android:hint="@string/aemail"
                android:maxLength="64"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_txt"
                android:drawableLeft="@drawable/ic_action_secure"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_action_secure"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <com.sharmastech.skillhouettes.controls.CustomTextView
                android:id="@+id/login_lgn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:background="@drawable/template_button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                customtv:fontType="5" />


            <com.sharmastech.skillhouettes.controls.CustomTextView
                android:id="@+id/forgotPswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_horizontal"
                android:padding="15dp"
                android:text="@string/forgotPassword"
                android:textColor="@color/bs_blue"
                customtv:fontType="5" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>