<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:transitionName="appicons" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:orientation="vertical">


            <com.sharmastech.skillhouettes.controls.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/stusignup"
                android:textColor="@color/bs_blue"
                android:textSize="20sp"
                customtv:fontType="5" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_teacherid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/account_txt"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/firstname"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/lastname"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/emailid"
                    android:inputType="textEmailAddress"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/phoneno"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyz@-_.1234567890"
                    android:drawablePadding="10dp"
                    android:hint="@string/dob"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray" />
            </android.support.design.widget.TextInputLayout>

            <com.sharmastech.skillhouettes.controls.CustomTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_horizontal"
                android:background="@drawable/template_button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                customtv:fontType="5" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>