<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:padding="5dp">

        <com.ooredoo.musicbox.controls.CustomTextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            customtv:fontType="5" />

        <com.ooredoo.musicbox.controls.CustomTextView
            android:id="@+id/tv_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:autoLink="web|email|phone"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="5dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            customtv:fontType="4" />

        <com.ooredoo.musicbox.controls.CustomTextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_message"
            android:layout_margin="10dp"
            android:background="@drawable/template_button_bg"
            android:gravity="center"
            android:text="@string/ok_txt"
            android:textColor="@android:color/white"
            customtv:fontType="4" />

        <com.ooredoo.musicbox.controls.CustomTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/tv_ok"
            android:layout_toStartOf="@+id/tv_ok"
            android:background="@drawable/template_button_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:visibility="gone"
            customtv:fontType="4" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
         />

</RelativeLayout>